# encrypted-chat

./: Cargo.toml  README.md
frontend/: gatsby-config.ts  package-lock.json  package.json
frontend/src/components/chat-message/: index.module.scss  index.module.scss.d.ts  index.tsx
frontend/src/components/chatbox/: index.module.scss  index.module.scss.d.ts  index.tsx
frontend/src/components/socket-gui/: index.module.scss  index.module.scss.d.ts  index.tsx
frontend/src/pages/: 404.tsx  index.tsx
frontend/src/styles/: global.scss  index.module.scss  index.module.scss.d.ts
src/: chat_manager.rs  main.rs  session.rs
